# test-repo-1

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
analysis/: README.md  avg_by_category_region.sql  avg_by_category_region_cte.sql  mock_dataset.csv  pandas_analysis.py  requirements.txt  run_and_compare.py  sqlite_analysis.py  sqlite_python_wrapper_analysis.py
python-vuln-demo/: pyproject.toml  requirements.txt
python-vuln-demo/src/vuln_demo/: __init__.py  demo.py
src/: App.tsx  main.tsx  mockData.ts  styles.css
