[
  build-system
]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-demo"
version = "0.1.0"
description = "Intentionally vulnerable dependency demo for security scanning."
requires-python = ">=3.10"
dependencies = [
  # Intentionally old pins to validate vulnerability scanners.
  "requests==2.19.1",
  "PyYAML==5.3.1",
  "Jinja2==2.11.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
